force-app/main/default/objects/Record_Type_Mapping__c/Record_Type_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Provides mapping for record types for the creation of records based on a parent case's record type.

Defines which violation types to display in the violation engine for which case type, based on record types, and which case violation rec type should be created as a result.</description>
    <label>Record Type Mapping</label>
</CustomObject>