force-app/main/default/objects/Record_Type_Mapping__c/fields/Case_Violation_Rec_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Violation_Rec_Type__c</fullName>
    <inlineHelpText>Enter the case violation record type that should be created as a result of the violation engine completing</inlineHelpText>
    <label>Case Violation Rec Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>