force-app/main/default/objects/Record_Type_Mapping__c/fields/Liable_Party_Rec_Type__c.field-meta.xml
<CustomField>
    <fullName>Liable_Party_Rec_Type__c</fullName>
    <description>Rec Type of the liable party created from cases of this type.</description>
    <label>Liable Party Rec Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>