force-app/main/default/objects/Record_Type_Mapping__c/fields/Office_Rec_Type__c.field-meta.xml
<CustomField>
    <fullName>Office_Rec_Type__c</fullName>
    <description>Record type of the office to which the case should be assigned. Used in the Office zip code mapping.</description>
    <label>Office Rec Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>