force-app/main/default/objects/Record_Type_Mapping__c/fields/Violation_Type_Rec_Type__c.field-meta.xml
<CustomField>
    <fullName>Violation_Type_Rec_Type__c</fullName>
    <inlineHelpText>Enter the record type of the violation types that should display in the violation engine for the related case rec type.</inlineHelpText>
    <label>Violation Type Rec Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>